--- a/goodbye.html
+++ b/goodbye.html
@@ -5,5 +5,4 @@
   <li> English: Goodbye, friends! </li>
   <li> Spanish:  Adios, amigos! </li>
 </ul> 
-<li> French: Au revoir
-  ! </li>
+<li> French: Au revoir! </li>
